cmake_minimum_required(VERSION 3.14)
project(C)

set(CMAKE_CXX_STANDARD 14)

add_executable(001_String_In_C 001_String_In_C/main.c)
add_executable(002_Function 002_Function/main.c)
add_executable(003_Scanf_Input_Output 003_Scanf_Input_Output/main.c)
add_executable(004_Integer_Data_Types 004_Integer_Data_Types/main.c)
add_executable(005_Octal_Hexa_Decimals 005_Octal_Hexa_Decimals/main.c)
add_executable(006_Fixed_Width_Decimal 006_Fixed_Width_Decimal/main.c)
add_executable(007_ASCII 007_ASCII/main.c)
add_executable(008_Floating_Point 008_Floating_Point/main.c)
add_executable(009_Boolean 009_Boolean/main.c)
add_executable(010_Complex 010_Complex/main.c)
add_executable(011_String_Input_Output 011_String_Input_Output/main.c)
add_executable(012_Operator_Sizeof 012_Operator_Sizeof/main.c)
add_executable(013_Array_Indexing 013_Array_Indexing/main.c)
add_executable(014_String_Length_vs_Sizeof_String 014_String_Length_vs_Sizeof_String/main.c)
add_executable(015_Constants 015_Constants/main.c)
add_executable(016_Overflow 016_Overflow/main.c)
add_executable(017_Multiplication 017_Multiplication/main.c)
add_executable(018_Division 018_Division/main.c)
add_executable(019_Increase_Decrease_Operator 019_Increase_Decrease_Operator/main.c)
add_executable(020_Function_Test 020_Function_Test/main.c)
add_executable(021_Using_Scanf_Return_Value 021_Using_Scanf_Return_Value/main.c)
add_executable(022_Guessing_PI 022_Guessing_PI/main.c)
add_executable(023_For_Statement_test 023_For_Statement_test/main.c)
add_executable(024_Xenon_Paradox 024_Xenon_Paradox/main.c)
add_executable(025_Finding_Secret_Number 025_Finding_Secret_Number/main.c)
add_executable(026_Printing_Alphabets 026_Printing_Alphabets/main.c)
add_executable(027_Input_Number_SUM 027_Input_Number_SUM/main.c)
add_executable(028_Function_Return_Test 028_Function_Return_Test/main.c)
add_executable(029_STDIO 029_STDIO/main.c)
add_executable(030_STDIO2.c 030_STDIO2/main.c)
add_executable(031_KR_Comprehensive_Income_Tax 031_KR_Comprehensive_Income_Tax/main.c)
add_executable(032_US_Comprehensive_Income_Tax 032_US_Comprehensive_Income_Tax/main.c)
add_executable(033_Determine_Prime_Number 033_Determine_Prime_Number/main.c)
add_executable(034_Logic_Operator 034_Logic_Operator/main.c)
add_executable(035_Elements_of_Statement 035_Elements_of_Statement/main.c)
add_executable(036_Conditional_Operator 036_Conditional_Operator/main.c)
add_executable(037_Min_Max_Aver 037_Min_Max_Aver/main.c)
add_executable(038_Using_Switch 038_Using_Switch/main.c)
add_executable(039_Buffer_test_01 039_Buffer_test_01/main.c)
add_executable(040_Counting_program 040_Counting_program/main.c)
add_executable(041_Printing_In_A_Matrix 041_Printing_In_A_Matrix/main.c)
add_executable(042_Confirm_Input 042_Confirm_Input/main.c)
add_executable(043_Menu 043_Menu/main.c)
add_executable(044_Read_File 044_Read_File/main.c)
add_executable(045_Refactoring 045_Refactoring/main.c)
add_executable(046_Recursive_Function 046_Recursive_Function/main.c)
add_executable(047_To_Binary 047_To_Binary/main.c)
add_executable(048_Fibonacci 048_Fibonacci/main.c)
add_executable(049_Pointer_and_Address 049_Pointer_and_Address/main.c)
add_executable(050_Forecast_Data 050_Forecast_Data/main.c)